[package]
name = "sleek"
version = "0.3.0"
edition = "2024"
description = "Sleek is a CLI tool for formatting SQL files."
authors = ["Nicholas Rempel <nbrempel@gmail.com>"]
license = "MIT"
keywords = ["sql", "format", "cli"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/nrempel/sleek"
rust-version = "1.85"


[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
glob = "0.3.1"
sqlformat = "0.3.5"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.15.0"
